--- a/public/wp-content/uploads/elementor/css/post-30.css
+++ b/public/wp-content/uploads/elementor/css/post-30.css
@@ -5,8 +5,8 @@
 
 .elementor-30 .elementor-element.elementor-element-7527857:not(.elementor-motion-effects-element-type-background),
 .elementor-30 .elementor-element.elementor-element-7527857>.elementor-motion-effects-container>.elementor-motion-effects-layer {
-	background-color: transparent;
-	background-image: linear-gradient(90deg, #FFDE59 0%, #FF66C4 100%);
+	background-color: #000;
+	background-image: linear-gradient(90deg, #000 0%, #000 100%);
 }
 
 .elementor-30 .elementor-element.elementor-element-7527857>.elementor-background-overlay {
