--- a/wp-content/uploads/elementor/css/home.css
+++ b/wp-content/uploads/elementor/css/home.css
@@ -1,3 +1,87 @@
+.elementor-8 .elementor-element.elementor-element-d7ea8e1 img {
+    width: 100%;
+    height: 100%;
+    max-width: 250px;
+    margin-top: -80px;
+}
+
+.elementor-32 .elementor-element.elementor-element-60f0ea5:not(.elementor-motion-effects-element-type-background),
+.elementor-32 .elementor-element.elementor-element-60f0ea5>.elementor-motion-effects-container>.elementor-motion-effects-layer {
+    background-color: #000 !important;
+    background-image: linear-gradient(90deg, #000 0%, #000 100%);
+}
+
+.elementor-8 .elementor-element.elementor-element-ba90b25:not(.elementor-motion-effects-element-type-background),
+.elementor-8 .elementor-element.elementor-element-ba90b25>.elementor-motion-effects-container>.elementor-motion-effects-layer {
+    background-color: #000000;
+}
+
+.elementor-8 .elementor-element.elementor-element-d07a702 .elementor-heading-title {
+    color: #FFFFFF;
+    font-family: "Helvetica", Sans-serif;
+    font-size: 30px;
+    font-weight: 600;
+    line-height: 39px;
+}
+
+.elementor-8 .elementor-element.elementor-element-996ad43 .elementor-button {
+    font-family: "Sailec", Sans-serif;
+    font-size: 0.9rem;
+    font-weight: 600;
+    letter-spacing: 1.2px;
+    fill: #FFFFFF;
+    color: #FFFFFF;
+    background-color: #4285F4;
+    border-radius: 7px 7px 7px 7px;
+    margin-right: 85px;
+}
+
+.elementor-8 .elementor-element.elementor-element-a212a53 img {
+    width: 100%;
+    max-width: 100%;
+    height: 300px !important;
+    object-fit: contain !important;
+}
+
+.elementor-8 .elementor-element.elementor-element-d07a702>.elementor-widget-container {
+    margin: 90px 0px 0px 0px;
+}
+
+.elementor-8 .elementor-element.elementor-element-d07a702 {
+    text-align: left;
+}
+
+.elementor-8 .elementor-element.elementor-element-2cf99e1>.elementor-element-populated {
+    padding: 0px 30px 40px 50px;
+}
+
+.elementor-8 .elementor-element.elementor-element-44e602b .elementor-heading-title {
+    color: #330252;
+    font-family: "Helvetica", Sans-serif;
+    font-weight: 600;
+    font-size: 40px;
+}
+
+.elementor-8 .elementor-element.elementor-element-5a907eb .elementor-heading-title {
+    color: #330252;
+    font-family: "Helvetica", Sans-serif;
+    font-weight: 600;
+    font-size: 40px;
+}
+
+.elementor-8 .elementor-element.elementor-element-e08eaf8 .elementor-heading-title {
+    color: #FFFFFF;
+    font-family: "Helvetica", Sans-serif;
+    font-weight: 600;
+    font-size: 40px;
+}
+
+img {
+    max-width: 100%;
+}
+
+
+
 .elementor-8 .elementor-element.elementor-element-61aca54>.elementor-element-populated {
     padding: 0px 0px 0px 0px;
 }
@@ -625,6 +709,81 @@ i.fas.fa-chevron-down {
     color: #FFFFFF;
 }
 
+.tag {
+    text-align: center;
+    font-size: 1.1rem
+}
+
+.card {
+    background: linear-gradient(to right, #434343, #000000);
+    height: 300px;
+    padding: 10px 20px;
+    border: none;
+    box-shadow: -1px 3px 5px #a7a7a7
+}
+
+.testimonial {
+    color: #fff;
+    font-size: 0.9rem;
+    line-height: 1.4rem;
+    font-weight: 500;
+    font-family: "Helvetica";
+}
+
+.profile {
+    padding-top: 10px
+}
+
+.name {
+    color: #fff;
+    font-weight: 700;
+    padding-left: 15px;
+    font-size: 15px;
+}
+
+.designation {
+    color: #fff !important;
+    font-size: 0.84rem;
+    font-weight: 600;
+    padding-left: 15px;
+    font-size: 12px;
+}
+
+.owl-test {
+    margin-top: 20px;
+    margin-bottom: 15px
+}
+
+.uc-items-wrapper .testimonial-car {
+    padding: 40px 10px;
+    /* height: 380px */
+}
+
+.owl-test .testimonial-car img {
+    width: 45px !important;
+    height: 45px;
+    border-radius: 50%;
+    object-fit: cover
+}
+
+.elementor-8 .elementor-element.elementor-element-6e5206e .elementor-heading-title {
+    color: #330252;
+    font-family: "Helvetica", Sans-serif;
+    font-weight: 600;
+    font-size: 40px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    margin-left: 375px;
+}
+
+.badge-warning {
+    background-color: #262626;
+    color: #fff;
+    font-size: 11px;
+    font-family: "Helvetica", Sans-serif;
+    margin-right: 20px;
+}
+
 @media (max-width: 767px) {
 
 
@@ -632,6 +791,18 @@ i.fas.fa-chevron-down {
     body {
         max-width: 100%;
         overflow-x: hidden;
+    }
+
+    .elementor-element-92ef909 {
+        display: none !important;
+    }
+
+    .elementor-element-e84c9ef {
+        display: none !important;
+    }
+
+    .elementor-element.elementor-element-e08eaf8 .elementor-heading-title {
+        color: #330252;
     }
 
     .mobile {
@@ -1149,7 +1320,7 @@ i.fas.fa-chevron-down {
         font-family: "Helvetica", Sans-serif;
         font-weight: 400;
         font-size: 10px !important;
-        margin-top: -30px !important; 
+        margin-top: -30px !important;
         margin-left: 50px !important;
     }
 
@@ -1431,4 +1602,38 @@ i.fas.fa-chevron-down {
         font-size: 10px !important;
     }
 }
-</style>
+
+@media(max-width: 575.5px) {
+    .container {
+        margin: 0px;
+        padding: 20px
+    }
+}
+
+@media (min-width: 1024px) and (max-width:1280px) {
+    .elementor-8 .elementor-element.elementor-element-daa9944>.elementor-widget-container {
+        padding: 80px 0px 0px 0px;
+    }
+
+    .elementor-8 .elementor-element.elementor-element-d07a702 .elementor-heading-title {
+        color: #FFFFFF;
+        font-family: "Helvetica", Sans-serif;
+        font-size: 26px;
+        font-weight: 600;
+        line-height: 39px;
+    }
+}
+
+@media screen and (max-width:480px) {
+    .elementor-element-92ef909 {
+        display: none !important;
+    }
+
+    .elementor-element-e84c9ef {
+        display: none !important;
+    }
+
+    .elementor-element.elementor-element-e08eaf8 .elementor-heading-title {
+        color: #330252;
+    }
+}
