--- a/public/wp-content/uploads/elementor/css/post-18.css
+++ b/public/wp-content/uploads/elementor/css/post-18.css
@@ -33,6 +33,6 @@
 	font-style: normal;
 	font-weight: normal;
 	src: url('https://wiseadvizor.com/wp-content/uploads/2023/06/Sailec-Thin.ttf') format('truetype');
-	font-display: swap;
+	font-display: optional;
 }
 /* End Custom Fonts CSS */
