--- a/public/wp-content/uploads/elementor/css/post-8.css
+++ b/public/wp-content/uploads/elementor/css/post-8.css
@@ -58,21 +58,21 @@
 	font-style: normal;
 	font-weight: normal;
 	src: url('wiseAdvizor/wp-content/uploads/2023/06/Sailec-Regular-Italic.ttf') format('truetype');
-	font-display: swap;
+	font-display: optional;
 }
 @font-face {
 	font-family: 'Sailec';
 	font-style: normal;
 	font-weight: normal;
 	src: url('wiseAdvizor/wp-content/uploads/2023/06/Sailec-Thin.ttf') format('truetype');
-	font-display: swap;
+	font-display: optional;
 }
 @font-face {
 	font-family: 'Sailec';
 	font-style: normal;
 	font-weight: normal;
 	src: url('wiseAdvizor/wp-content/uploads/2023/06/Sailec-Thin.ttf') format('truetype');
-	font-display: swap;
+	font-display: optional;
 }
 /* End Custom Fonts CSS */
 /* Start Custom Fonts CSS */
@@ -81,6 +81,6 @@
 	font-style: normal;
 	font-weight: normal;
 	src: url('wiseAdvizor/wp-content/uploads/2023/06/Sailec-Bold.ttf') format('truetype');
-	font-display: swap;
+	font-display: optional;
 }
 /* End Custom Fonts CSS */
