--- a/wp-content/plugins/elementor/assets/lib/font-awesome/css/all.css
+++ b/wp-content/plugins/elementor/assets/lib/font-awesome/css/all.css
@@ -4587,7 +4587,7 @@ readers do not read off random characters that represent icons */
   font-family: 'Font Awesome 5 Brands';
   font-style: normal;
   font-weight: 400;
-  font-display: block;
+  font-display: optional;
   src: url("https://wiseadvizor.com/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-brands-400.eot");
   src: url("https://wiseadvizor.com/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-brands-400.eot#iefix") format("embedded-opentype"), url("https://wiseadvizor.com/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-brands-400.woff2") format("woff2"), url("https://wiseadvizor.com/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-brands-400.woff") format("woff"), url("https://wiseadvizor.com/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-brands-400.ttf") format("truetype"), url("https://wiseadvizor.com/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-brands-400.svg#fontawesome") format("svg"); }
 
@@ -4611,7 +4611,7 @@ readers do not read off random characters that represent icons */
   font-weight: 900;
   src: url("https://wiseadvizor.com/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-solid-900.eot");
   src: url("https://wiseadvizor.com/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-solid-900.eot#iefix") format("embedded-opentype"), url("https://wiseadvizor.com/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-solid-900.woff2") format("woff2"), url("https://wiseadvizor.com/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-solid-900.woff") format("woff"), url("https://wiseadvizor.com/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-solid-900.ttf") format("truetype"), url("https://wiseadvizor.com/wp-content/plugins/elementor/assets/lib/font-awesome/webfonts/fa-solid-900.svg#fontawesome") format("svg"); 
-  font-display: swap;
+  font-display: optional;
 }
 
 .fa,
