--- a/wp-content/uploads/elementor/css/post-8.css
+++ b/wp-content/uploads/elementor/css/post-8.css
@@ -65,14 +65,14 @@
 	font-style: normal;
 	font-weight: normal;
 	src: url('https://wiseadvizor.com/wp-content/uploads/2023/06/Sailec-Thin.ttf') format('truetype');
-	font-display: swap;
+	font-display: optional;
 }
 @font-face {
 	font-family: 'Sailec';
 	font-style: normal;
 	font-weight: normal;
 	src: url('https://wiseadvizor.com/wp-content/uploads/2023/06/Sailec-Thin.ttf') format('truetype');
-	font-display: swap;
+	font-display: optional;
 }
 /* End Custom Fonts CSS */
 /* Start Custom Fonts CSS */@font-face {
