--- a/wp-content/uploads/elementor/css/carousal-style.scss
+++ b/wp-content/uploads/elementor/css/carousal-style.scss
@@ -8,25 +8,25 @@
   box-sizing: border-box;
 }
 
-body {
-  /*background: linear-gradient(
-    335deg,
-    rgba(170, 170, 170, 1) 0%,
-    rgba(240, 240, 240, 1) 50%
-  );*/
-  background: #D7BE82;
-  height: 100vh;
-  width: 100vw;
-  overflow: hidden;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin: 0;
-  padding: 0;
-  font-family: "Lato", sans-serif;
-  user-select: none;
-}
+// body {
+//   /*background: linear-gradient(
+//     335deg,
+//     rgba(170, 170, 170, 1) 0%,
+//     rgba(240, 240, 240, 1) 50%
+//   );*/
+//   background: #D7BE82;
+//   height: 100vh;
+//   width: 100vw;
+//   overflow: hidden;
+//   display: flex;
+//   flex-direction: column;
+//   align-items: center;
+//   justify-content: center;
+//   margin: 0;
+//   padding: 0;
+//   font-family: "Lato", sans-serif;
+//   user-select: none;
+// }
 
 .title {
   color: rgba(0, 0, 0, 0.8);
