--- a/wp-content/uploads/elementor/css/carousal-style.scss
+++ b/wp-content/uploads/elementor/css/carousal-style.scss
@@ -28,16 +28,16 @@
 //   user-select: none;
 // }
 
-.title {
-  color: rgba(0, 0, 0, 0.8);
-  font-size: 1.2vmax;
-  margin: 0rem 0;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
-  width: calc(65% - 4rem);
-}
+// .title {
+//   color: rgba(0, 0, 0, 0.8);
+//   font-size: 1.2vmax;
+//   margin: 0rem 0;
+//   display: flex;
+//   flex-direction: column;
+//   align-items: flex-start;
+//   justify-content: center;
+//   width: calc(65% - 4rem);
+// }
 
 .overflow { //css container for all the slides + buttons
   width: 65%;
