--- a/public/wp-content/uploads/elementor/css/post-2372.css
+++ b/public/wp-content/uploads/elementor/css/post-2372.css
@@ -5,28 +5,28 @@
 	font-style: normal;
 	font-weight: normal;
 	src: url('https://wiseadvizor.com/wp-content/uploads/2023/06/Sailec-Bold.ttf') format('truetype');
-	font-display: swap;
+	font-display: optional;
 }
 @font-face {
 	font-family: 'Sailec';
 	font-style: normal;
 	font-weight: normal;
 	src: url('https://wiseadvizor.com/wp-content/uploads/2023/06/Sailec-Light.ttf') format('truetype');
-	font-display: swap;
+	font-display: optional;
 }
 @font-face {
 	font-family: 'Sailec';
 	font-style: normal;
 	font-weight: normal;
 	src: url('https://wiseadvizor.com/wp-content/uploads/2023/06/Sailec-Medium.ttf') format('truetype');
-	font-display: swap;
+	font-display: optional;
 }
 @font-face {
 	font-family: 'Sailec';
 	font-style: normal;
 	font-weight: normal;
 	src: url('https://wiseadvizor.com/wp-content/uploads/2023/06/Sailec-Regular-Italic.ttf') format('truetype');
-	font-display: swap;
+	font-display: optional;
 }
 @font-face {
 	font-family: 'Sailec';
@@ -43,6 +43,6 @@
 	font-style: normal;
 	font-weight: normal;
 	src: url('https://wiseadvizor.com/wp-content/uploads/2023/06/Sailec-Bold.ttf') format('truetype');
-	font-display: swap;
+	font-display: optional;
 }
 /* End Custom Fonts CSS */
