--- a/public/wp-content/uploads/elementor/css/post-8.css
+++ b/public/wp-content/uploads/elementor/css/post-8.css
@@ -37,21 +37,21 @@
 	font-style: normal;
 	font-weight: normal;
 	src: url('wiseAdvizor/wp-content/uploads/2023/06/Sailec-Bold.ttf') format('truetype');
-	font-display: swap;
+	font-display: optional;
 }
 @font-face {
 	font-family: 'Sailec';
 	font-style: normal;
 	font-weight: normal;
 	src: url('wiseAdvizor/wp-content/uploads/2023/06/Sailec-Light.ttf') format('truetype');
-	font-display: swap;
+	font-display: optional;
 }
 @font-face {
 	font-family: 'Sailec';
 	font-style: normal;
 	font-weight: normal;
 	src: url('wiseAdvizor/wp-content/uploads/2023/06/Sailec-Medium.ttf') format('truetype');
-	font-display: swap;
+	font-display: optional;
 }
 @font-face {
 	font-family: 'Sailec';
