--- a/wp-content/uploads/elementor/css/post-13.css
+++ b/wp-content/uploads/elementor/css/post-13.css
@@ -5,14 +5,14 @@
 	font-style: normal;
 	font-weight: normal;
 	src: url('https://wiseadvizor.com/wp-content/uploads/2023/06/Sailec-Bold.ttf') format('truetype');
-	font-display: swap;
+	font-display: optional;
 }
 @font-face {
 	font-family: 'Sailec';
 	font-style: normal;
 	font-weight: normal;
 	src: url('https://wiseadvizor.com/wp-content/uploads/2023/06/Sailec-Light.ttf') format('truetype');
-	font-display: swap;
+	font-display: optional;
 
 }
 @font-face {
@@ -20,7 +20,7 @@
 	font-style: normal;
 	font-weight: normal;
 	src: url('https://wiseadvizor.com/wp-content/uploads/2023/06/Sailec-Medium.ttf') format('truetype');
-	font-display: swap;
+	font-display: optional;
 
 }
 @font-face {
@@ -28,7 +28,7 @@
 	font-style: normal;
 	font-weight: normal;
 	src: url('https://wiseadvizor.com/wp-content/uploads/2023/06/Sailec-Regular-Italic.ttf') format('truetype');
-	font-display: swap;
+	font-display: optional;
 
 }
 @font-face {
