--- a/wp-content/uploads/elementor/css/post-2372-copy.css
+++ b/wp-content/uploads/elementor/css/post-2372-copy.css
@@ -5,21 +5,21 @@
 	font-style: normal;
 	font-weight: normal;
 	src: url('https://wiseadvizor.com/wp-content/uploads/2023/06/Sailec-Bold.ttf') format('truetype');
-	font-display: swap;
+	font-display: optional;
 }
 @font-face {
 	font-family: 'Sailec';
 	font-style: normal;
 	font-weight: normal;
 	src: url('https://wiseadvizor.com/wp-content/uploads/2023/06/Sailec-Light.ttf') format('truetype');
-	font-display: swap;
+	font-display: optional;
 }
 @font-face {
 	font-family: 'Sailec';
 	font-style: normal;
 	font-weight: normal;
 	src: url('https://wiseadvizor.com/wp-content/uploads/2023/06/Sailec-Medium.ttf') format('truetype');
-	font-display: swap;
+	font-display: optional;
 
 }
 @font-face {
@@ -27,7 +27,7 @@
 	font-style: normal;
 	font-weight: normal;
 	src: url('https://wiseadvizor.com/wp-content/uploads/2023/06/Sailec-Regular-Italic.ttf') format('truetype');
-	font-display: swap;
+	font-display: optional;
 
 }
 @font-face {
@@ -45,6 +45,6 @@
 	font-style: normal;
 	font-weight: normal;
 	src: url('https://wiseadvizor.com/wp-content/uploads/2023/06/Sailec-Bold.ttf') format('truetype');
-	font-display: swap;
+	font-display: optional;
 }
 /* End Custom Fonts CSS */
