--- a/wp-content/uploads/elementor/css/post-2942.css
+++ b/wp-content/uploads/elementor/css/post-2942.css
@@ -5,7 +5,7 @@
 	font-style: normal;
 	font-weight: normal;
 	src: url('https://wiseadvizor.com/wp-content/uploads/2023/06/Sailec-Bold.ttf') format('truetype');
-	font-display: swap;
+	font-display: optional;
 
 }
 @font-face {
@@ -13,7 +13,7 @@
 	font-style: normal;
 	font-weight: normal;
 	src: url('https://wiseadvizor.com/wp-content/uploads/2023/06/Sailec-Light.ttf') format('truetype');
-	font-display: swap;
+	font-display: optional;
 
 }
 @font-face {
@@ -21,7 +21,7 @@
 	font-style: normal;
 	font-weight: normal;
 	src: url('https://wiseadvizor.com/wp-content/uploads/2023/06/Sailec-Medium.ttf') format('truetype');
-	font-display: swap;
+	font-display: optional;
 
 }
 @font-face {
@@ -29,7 +29,7 @@
 	font-style: normal;
 	font-weight: normal;
 	src: url('https://wiseadvizor.com/wp-content/uploads/2023/06/Sailec-Regular-Italic.ttf') format('truetype');
-	font-display: swap;
+	font-display: optional;
 
 }
 @font-face {
