--- a/wp-content/uploads/elementor/css/profile.css
+++ b/wp-content/uploads/elementor/css/profile.css
@@ -237,7 +237,7 @@ li {
 .elementor-4878 .elementor-element.elementor-element-4yln1aq:not(.elementor-motion-effects-element-type-background),
 .elementor-4878 .elementor-element.elementor-element-4yln1aq>.elementor-motion-effects-container>.elementor-motion-effects-layer {
     background-color: #F3F1F6 !important;
-    background-image: url("https://ivygroupco.com/wp-content/uploads/2023/11/shape1-horiz.png");
+    background-image: url("https://wiseadvizor.com/wp-content/uploads/2023/11/shape1-horiz.webp");
     background-position: center right;
     background-repeat: no-repeat;
 }
