--- a/wp-content/plugins/elementor/assets/lib/eicons/css/elementor-icons.css
+++ b/wp-content/plugins/elementor/assets/lib/eicons/css/elementor-icons.css
@@ -4,7 +4,7 @@
 	src: url("https://wiseadvizor.com/wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.eot?5_20_0#iefix") format("embedded-opentype"), url("https://wiseadvizor.com/wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.woff2?5_20_0") format("woff2"), url("https://wiseadvizor.com/wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.woff?5_20_0") format("woff"), url("https://wiseadvizor.com/wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.ttf?5_20_0") format("truetype"), url("https://wiseadvizor.com/wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.svg?5_20_0#eicon") format("svg");
 	font-weight: normal;
 	font-style: normal;
-	font-display: block;
+	font-display: optional;
 }
 [class^=eicon],
 [class*=" eicon-"] {
